springbootjenkins.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  serviceName: mongodbsvc
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        command:
        - "mongod"
        - "--replSet"
        - "MainRepSet"
        - "--bind_ip"
        - "0.0.0.0"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongovol
          mountPath: "/data/db"
  volumeClaimTemplates:
  - metadata:
      name: mongovol
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodbsvc
  namespace: test
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: springapp
        image: shahir5890/springjenkins:tag
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 112m
            memory: 112Mi
          limits:
            cpu: 256m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: springsvc
  namespace: test
spec:
  type: NodePort
  selector:
    app: spring
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
