springbootload.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongod
  namespace: demo
spec:
  selector:
    matchLabels:
      app: mongod
  serviceName: mongodbservice
  replicas: 3
  template:
    metadata:
      labels:
        app: mongod
    spec:
      containers:
      - name: mongodbcontainer
        image: mongo:6
        command:
         - "mongod"
         - "--replSet"
         - "MainRepSet"
         - "--bind_ip"
         - "0.0.0.0"
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodbpv
          mountPath: "/data/db"
  volumeClaimTemplates:
  - metadata:
      name: mongodbpv
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodbservice
  namespace: demo
spec:
  clusterIP: None
  selector:
    app: mongod
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springappdeployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      name: springapppod
      labels:
        app: springapp
    spec:
      containers:
      - name: springappcontainer
        image: shahir5890/springboot:TAG
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 356Mi
---
apiVersion: v1
kind: Service
metadata:
  name: springappsvc
  namespace: demo
spec:
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
